--- a/app/templates/_about.html
+++ b/app/templates/_about.html
@@ -25,6 +25,8 @@
 		{{ > lines }}
 	</div>
 
+	{{ > form }}
+
 	<script src="js/build/index.min.js"></script>
 
 	<script src='//localhost:3000/socket.io/socket.io.js'></script>
