--- a/app/templates/partials/about/step-2.html
+++ b/app/templates/partials/about/step-2.html
@@ -3,7 +3,10 @@
 		<div class="title-step">
 			<h2>"PUMA"</h2>
 			<div class="text">
-				<p>Італійське обладнання останнього (п’ятого) покоління<br>Автоматизований процес виробництва</p>
+				<p class="sub sub-1">Італійське обладнання</p>
+				<p>останнього (п’ятого) покоління</p>
+				<p class="sub sub-2">Автоматизований</p>
+				<p>процес виробництва</p>
 			</div>
 		</div>
 		<div class="item-wrapper">
