--- a/app/templates/partials/about/step-3.html
+++ b/app/templates/partials/about/step-3.html
@@ -2,25 +2,17 @@
 	<div class="wrapper">
 		<div class="title-step">
 			<h2>Доставка</h2>
+			<p class="sub sub-1">частинами до часу<br>монтажу</p>
 			<div class="text">
-				<p>частинами до часу монтажу</p>
-			</div>
-			<p class="sub">17 власних авто</p>
-			<div class="text">
+				<p class="sub sub-2">17 власних авто</p>
 				<p>Наш інженер веде всі проекти<br>від подачі заявки до монтажу</p>
 			</div>
 		</div>
 		<div class="item-wrapper">
 			<div class="item item-1" style="background:url('{{{about.image-6}}}') no-repeat center/cover fixed"></div>
-			<div class="item item-2" style="background:url('{{{about.image-7}}}') no-repeat center/cover fixed"></div>
-			<div class="item item-3" style="background:url('{{{about.image-8}}}') no-repeat center/cover fixed"></div>
-			<div class="item item-4">
-				<div class="video">
-					<video id="video-about-2" preload="none" loop autoplay>
-						<source src="video/video5.mp4" type="video/mp4">
-					</video>
-				</div>
-			</div>
+			<div class="item item-2" style="background:url('{{{about.image-6}}}') no-repeat center/cover fixed"></div>
+			<div class="item item-3" style="background:url('{{{about.image-6}}}') no-repeat center/cover fixed"></div>
+			<div class="item item-4" style="background:url('{{{about.image-6}}}') no-repeat center/cover fixed"></div>
 		</div>
 	</div>
 </div>
