--- a/scss/app.scss
+++ b/scss/app.scss
@@ -35,4 +35,4 @@ $pictpath: "../pictures/";
 @import 'content/portfolio/commonstyles';
 @import 'content/montage/commonstyles';
 @import 'content/magellan';
-
+@import 'content/form';
