--- a/app/templates/partials/about/step-1.html
+++ b/app/templates/partials/about/step-1.html
@@ -1,14 +1,14 @@
 <div class="step step-1">
 	<div class="wrapper">
 		<div class="title-step">
-			<h2>Три заводи</h2>
+			<h2><span class="num">3</span>фірмові<br>заводи</h2>
 			<div class="text">
-				<p class="sub"> виготовляємо всі види сендвіч панелей</p>
+				<p class="sub">виготовляємо всі види сендвіч панелей</p>
 				<p><span>м. Червоноград</span>, Львівська обл.<br>
 					<span>с. Кринички</span>, Миколаївська обл.<br>
 					<span>м. Тернопіл</span>
 				</p>
-				<p>Виготовляється 3 млн. кв. м. сендвіч-плити<br>за рік на трьох заводах</p>
+				<p>Виготовляється 3 млн. кв. м. сендвіч-плити за рік на трьох заводах</p>
 			</div>
 		</div>
 		<div class="item-wrapper">
