--- a/app/templates/partials/about/step-6.html
+++ b/app/templates/partials/about/step-6.html
@@ -1,11 +1,18 @@
 <div class="step step-6">
 	<div class="wrapper">
 		<div class="title-step">
-			<h2>Звяжіться<br>з нами</h2>
+			<h2>Напишіть нам</h2>
 			<div class="text">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem quasi, at. Ab praesentium quos natus!</p>
+				<p class="sub">Ми готові допомогти вам<br>в будь-якому питанню</p>
+				<p><a href="#" class="button">Задати питання</a></p>
 			</div>
 		</div>
+		<div class="item-wrapper">
+			<div class="item item-1" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="item item-2" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="item item-3" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="item item-4" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+			<div class="item item-5" style="background:url('{{{about.image-1}}}') no-repeat center/cover fixed"></div>
+		</div>
 	</div>
-	
 </div>
