--- a/scss/content/about/_step-2.scss
+++ b/scss/content/about/_step-2.scss
@@ -1,5 +1,24 @@
 .step-2 {
 
+	// title
+	.title-step {
+		margin-left: 16%;
+		.text {
+			max-width: 15vw;
+			position: relative;
+			left: 3vw;
+			p {
+				margin: 0;
+			}
+			.sub-1 {
+				margin: 4vw 0 8px 0;
+			}
+			.sub-2 {
+				margin: 2vw 0 8px 0;
+			}
+		}
+	}
+
 	// image
 	.item-wrapper {
 		position: absolute;
@@ -15,14 +34,16 @@
 				height: 30%;
 				left: calc(16.666666666666668% * 2 + 4px);
 				width: calc(16.666666666666668% * 1 - 9px);
+				-webkit-filter: grayscale(100%);
+				opacity: 0.1;
 			}
 			&.item-2 {
 				bottom: 0;
 				left: calc(16.666666666666668% * 3 + 4px);
-				height: 60%;
+				height: 70%;
 				width: calc(16.666666666666668% * 2 - 9px);
 			}
-			&.item-3 {
+			&.item-3 { display: none;
 				top: 0;
 				left: calc(16.666666666666668% * 5 + 4px);
 				height: 70%;
