--- a/scss/content/about/_step-6.scss
+++ b/scss/content/about/_step-6.scss
@@ -1,5 +1,38 @@
 .step-6 {
 
-
-	
+	// image
+	.item-wrapper {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		.item {
+			position: absolute;
+			left: 0;
+			&.item-1 {
+				display: none;
+			}
+			&.item-2 {
+				bottom: 0;
+				left: calc(16.666666666666668% * 2 + 3px);
+				height: 30%;
+				width: calc(16.666666666666668% * 1 - 8px);
+			}
+			&.item-3 {
+				bottom: 0;
+				left: calc(16.666666666666668% * 3 + 3px);
+				height: 60%;
+				width: calc(16.666666666666668% * 2 - 8px);
+				-webkit-filter: grayscale(100%);
+				opacity: 0.1;
+			}
+			&.item-4 {
+				display: none;
+			}
+			&.item-5 {
+				display: none;
+			}
+		}
+	}
 }
