--- a/scss/general/_elements.scss
+++ b/scss/general/_elements.scss
@@ -27,20 +27,22 @@ $color-2: #ebebeb;		// сірий
 		//max-width: calc(16vw - 1.6vw);
 		max-width: calc(22vw - 1.6vw);
 	}
-	.button {
-		margin: 2vw 0 0 0;
-		padding: 11px 36px 12px;
-		border: 1px solid #5498d5;
-		display: inline-block;
-		font-weight: 400;
-			color: #5498d5;
-			text-decoration: none;
-	}
 	p {
 		span {
 			font-weight: 500;
 		}
 	}
+}
+
+// button
+.button {
+	margin: 2vw 0 0 0;
+	padding: 11px 36px 12px;
+	border: 1px solid #5498d5;
+	display: inline-block;
+	font-weight: 400;
+		color: #5498d5;
+		text-decoration: none;
 }
 
 // lines
