--- a/app/templates/partials/blog/list.html
+++ b/app/templates/partials/blog/list.html
@@ -3,7 +3,9 @@
 	<h2>Блог</h2>
 	<p class="sub">Статті про вибір сендвіч-панелей,<br>правила монтажу</p>
 </div>
-
+<diw class="row" style="height:0px;overflow:hidden;opacity:0;">
+	<div class="columns large-12"><p>hello world! do not pay attention at me :)</p></div>
+</diw>
 <!-- list -->
 <div class="list">
 	<div class="items-wrapper">
@@ -11,7 +13,7 @@
 		<div class="item" type="{{{type}}}">
 			<p class="date">{{{date}}}</p>
 			<h4 class="title">{{{title}}}</h4>
-			<a href="#" class="more">Читати повністю</a>
+			<a href="#" class="more"></a>
 		</div>
 		{{/list.item}}
 	</div>
