--- a/app/templates/partials/blog/news.html
+++ b/app/templates/partials/blog/news.html
@@ -6,7 +6,13 @@
 <!-- body -->
 <div class="content">
 	<div class="date">
-		<p>12 квітня 2016 р.</p>
+		<p>
+			<span class="day">12</span>
+			<span class="point"></span>
+			<span class="month">05</span>
+			<span class="point"></span>
+			<span class="year">16</span>
+		</p>
 	</div>
 	<div class="wrapper">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ipsam blanditiis sint eius sapiente corrupti optio vero natus numquam nam.</p>
@@ -29,4 +35,10 @@
 			<li>Lorem ipsum dolor sit amet</li>
 		</ol>
 	</div>
+</div>
+
+<!-- image -->
+<div class="image-wrapper">
+	<div class="image image-1" style="background:url('{{{list.image}}}') no-repeat center/cover fixed"></div>
+	<div class="image image-2" style="background:url('{{{list.image}}}') no-repeat center/cover fixed"></div>
 </div>
