--- a/app/templates/partials/home/step-2.html
+++ b/app/templates/partials/home/step-2.html
@@ -5,20 +5,20 @@
 			<p class="sub">всі види сендвіч панелей</p>
 		</div>
 		<div class="buttons-wrapper">
-			<div class="button button-1">
-				<span class="top">Пінополістерол</span>
-				<span>Стінові</span>
-				<span>Покрівельні</span>
+			<div class="home-button">
+				<span class="top"><span>Пінополістерол</span></span>
+				<span><span>Стінові</span></span>
+				<span><span>Покрівельні</span></span>
 			</div>
-			<div class="button button-2">
-				<span class="top">Мінеральна вата</span>
-				<span>Стінові</span>
-				<span>Покрівельні</span>
+			<div class="home-button">
+				<span class="top"><span>Мінеральна вата</span></span>
+				<span><span>Стінові</span></span>
+				<span><span>Покрівельні</span></span>
 			</div>
-			<div class="button button-3">
-				<span class="top">Пінополіуретани</span>
-				<span>Стінові</span>
-				<span>Покрівельні</span>
+			<div class="home-button">
+				<span class="top"><span>Пінополіуретани</span></span>
+				<span><span>Стінові</span></span>
+				<span><span>Покрівельні</span></span>
 			</div>
 		</div>
 		<div class="visualization">
