--- a/app/templates/partials/home/step-4.html
+++ b/app/templates/partials/home/step-4.html
@@ -1,6 +1,9 @@
 <div class="step-4">
 	<div class="title-step">
 		<h2>Контакти</h2>
+		<div class="text">
+			<p>Lorem ipsum dolor sit amet, consectetur<br>adipisicing elit. Vero, facere!</p>
+		</div>
 	</div>
 
 	<!-- address -->
