--- a/scss/content/about/_step-4.scss
+++ b/scss/content/about/_step-4.scss
@@ -14,14 +14,14 @@
 			&.item-1 {
 				bottom: 0;
 				height: 60%;
-				left: calc(16.666666666666668% * 4 - 5px);
-				width: calc(16.666666666666668% * 1 - 5px);
+				left: calc(16.666666666666668% * 4 + 4px);
+				width: calc(16.666666666666668% * 1 - 9px);
 			}
 			&.item-2 {
 				top: 0;
 				height: 60%;
-				left: calc(16.666666666666668% * 5 - 5px);
-				width: calc(16.666666666666668% * 1 - 5px);
+				left: calc(16.666666666666668% * 5 + 4px);
+				width: calc(16.666666666666668% * 1 - 4px);
 			}
 		}
 	}
