--- a/scss/content/home/_step-4.scss
+++ b/scss/content/home/_step-4.scss
@@ -3,7 +3,8 @@
 	//outline: 1px solid #00ff5e;
 	margin: 4vw 0 0 0;
 	padding: 6vw 0 0 0;
-	min-height: 100vh;
+	height: 100vh;
+	min-height: 900px;
 
 	// address
 	.address-wrapper {
