--- a/app/templates/partials/header.html
+++ b/app/templates/partials/header.html
@@ -1,10 +1,10 @@
 <header>
 	<div class="wrapper">
-		<div class="logo">
+		<a href="/" class="logo">
 			<div>
 				<img src="img/logo.png" alt="">
 			</div>
-		</div>
+		</a>
 		<div class="menu-button">
 			<div>
 				<span></span>
