--- a/scss/content/home/_step-2.scss
+++ b/scss/content/home/_step-2.scss
@@ -22,25 +22,28 @@
 
 	// buttons
 	.buttons-wrapper {
+		z-index: 1;
 		position: relative;
 		top: 3vw;
 		width: 16.666666666666668%;
 		//margin-left: 16.666666666666668%;
 		margin-left: 10%;
 		padding: 0 1vw;
-		.button {
+		.home-button {
 			&:not(:last-child) {
 				margin: 3vw 0;
 			}
-			span {
+			> span {
 				margin: 6px 0;
 				display: block;
-				cursor: pointer;
 					text-transform: uppercase;
 					font-size: 0.8vw;
 					line-height: 120%;
-				&:hover {
-					color: #0082ca;
+				> span {
+					cursor: pointer;
+					&:hover {
+						color: #0082ca;
+					}
 				}
 				&.top {
 					margin: 0 0 14px 0;
