--- a/scss/content/home/_step-3.scss
+++ b/scss/content/home/_step-3.scss
@@ -1,4 +1,5 @@
 .step-3 {
+	z-index: 1;
 	position: relative;
 	padding: 1vw;
 	min-height: 100vh;
@@ -65,7 +66,7 @@
 
 	// items
 	.item-wrapper {
-		//pointer-events: none;
+		pointer-events: none;
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -73,9 +74,6 @@
 		height: 100%;
 		.item {
 			position: absolute;
-			background: picture-url('img3.jpg') no-repeat center;
-			background-attachment: fixed;
-			background-size: cover;
 			transition: height .6s ease;
 			&.item-1 {
 				top: 70%;
@@ -117,7 +115,7 @@
 			position: absolute;
 			overflow: hidden;
 			background: #ececec;
-			transition: height .6s ease;
+			transition: height .6s 0s ease;
 			> div {
 				position: fixed;
 				top: 0;
@@ -151,7 +149,7 @@
 				top: 0;
 				left: calc(16.666666666666668% * 4 + 10px);
 				height: 70%;
-				width: calc(16.666666666666668% * 2 + 5px);
+				width: calc(16.666666666666668% * 2 + 9px);
 				video {
 					top: 50%;
 					left: 50%;
@@ -183,6 +181,7 @@
 		}
 		.video-wrapper {
 			.video {
+				transition: height .6s .1s ease;
 				&.video-1, &.video-2 {
 					height: 0;
 				}
@@ -195,23 +194,21 @@
 			}
 		}
 		.slider-wrapper {
-			.wrapper {
-				.slider {
-					.img {
-						&.img-1 {
-							height: 70%;
-						}
-						&.img-2 {
-							height: 70%;
-						}
-					}
+			.items .item .img {
+				&.img-1 {
+					transition: height .6s 0s ease, width .6s .1s ease;
+					height: 70%;
+				}
+				&.img-2 {
+					transition: height .6s 0s ease, width .6s .2s ease;
+					height: 70%;
 				}
 			}
 			.controls > div {
 				height: 5vw;
 			}
 			.pagination {
-				height: 20px;
+				height: 10px;
 			}
 		}
 	}
@@ -223,6 +220,93 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
+
+		// prijects
+		.items {
+			z-index: -2;
+			pointer-events: none;
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			.item {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				&.active {
+					.img {
+						&.img-1 {
+							width: calc(16.666666666666668% - 2px);
+						}
+						&.img-2 {
+							width: calc(16.666666666666668% * 2 + 9px);
+						}
+					}
+					.description {
+						width: calc(16.666666666666668% * 2 + 3px);
+					}
+				}
+
+				// images
+				.img {
+					transition: width .6s 0s ease;
+					position: absolute;
+					width: 100%;
+					height: 100%;
+					&.img-1 {
+						transition: height .6s .1s ease, width .6s .1s ease;
+						bottom: 0;
+						left: calc(16.666666666666668% * 3 + 3px);
+						height: 70%;
+						width: 0;
+					}
+					&.img-2 {
+						transition: height .6s .1s ease, width .6s .2s ease;
+						bottom: 30%;
+						left: calc(16.666666666666668% * 4 + 10px);
+						height: 70%;
+						width: 0;
+					}
+				}
+	
+
+				// description
+				.description {
+					position: absolute;
+					bottom: 0;
+					left: calc(16.666666666666668% - 9px);
+					width: 0;
+					height: 30%;
+					transition: height .6s 0s ease, width .6s 0s ease;
+					overflow: hidden;
+					.content-wrapper {
+						padding: 2vw 2vw;
+						background: $color-2;
+						height: 100%;
+						width: 32vw;
+						h3 {
+							margin: 0 0 1.3vw 0;
+								font-size: 1.2vw;
+								text-transform: uppercase;
+								font-weight: 300;
+						}
+						p {
+							margin: 0;
+							span {
+								font-weight: 500;
+								font-size: 14px;
+							}
+						}
+						.text {
+							margin: 0;
+						}
+					}
+				}
+			}
+		}
 
 		// controls
 		.controls {
@@ -282,138 +366,8 @@
 				}
 			}
 		}
-
-		// prijects
-		.wrapper {
-			pointer-events: none;
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			.slider {
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				.img {
-					position: absolute;
-					span {
-						transition: width .6s 0s ease;
-						position: absolute;
-						top: 0;
-						left: 0;
-						width: 0;
-						height: 100%;
-						background-attachment: fixed !important;
-						background-size: cover !important;
-					}
-					&.img-1 {
-						transition: height .6s 0s ease;
-						bottom: 0;
-						left: calc(16.666666666666668% * 3 + 3px);
-						height: 0;
-						width: calc(16.666666666666668% - 2px);
-					}
-					&.img-2 {
-						transition: height .6s 0s ease;
-						bottom: 30%;
-						left: calc(16.666666666666668% * 4 + 10px);
-						height: 0;
-						width: calc(16.666666666666668% * 2 + 5px);
-					}
-				}
-			}
-
-
-			&[project="project-1"] {
-				.slider-1 .img span {
-					width: 100%;
-					transition: width .6s .6s ease;
-				}
-				& + .description .text-1 {
-					width: 100%;
-					transition: width .6s .6s ease;
-				}
-				& + div + .pagination .point-1 { background: #5498d5; }
-			}
-			&[project="project-2"] {
-				.slider-2 .img span {
-					width: 100%;
-					transition: width .6s .6s ease;
-				}
-				& + .description .text-2 {
-					width: 100%;
-					transition: width .6s .6s ease;
-				}
-				& + div + .pagination .point-2 { background: #5498d5; }
-			}
-			&[project="project-3"] {
-				.slider-3 .img span {
-					width: 100%;
-					transition: width .6s .6s ease;
-				}
-				& + .description .text-3 {
-					width: 100%;
-					transition: width .6s .6s ease;
-				}
-				& + div + .pagination .point-3 { background: #5498d5; }
-			}
-			&[project="project-4"] {
-				.slider-4 .img span {
-					width: 100%;
-					transition: width .6s .6s ease;
-				}
-				& + .description .text-4 {
-					width: 100%;
-					transition: width .6s .6s ease;
-				}
-				& + div + .pagination .point-4 { background: #5498d5; }
-			}
-		}
-
-		// description
-		.description {
-			z-index: -2;
-			position: absolute;
-			bottom: 0;
-			left: calc(16.666666666666668% - 9px);
-			width: calc(16.666666666666668% * 2 + 3px);
-			height: 30%;
-			transition: height 0.6s 0s ease;
-			.text {
-				background: $color-2;
-				position: absolute;
-				top: 0;
-				left: 0;
-				height: 100%;
-				width: 0;
-				overflow: hidden;
-				transition: width .6s 0s ease;
-				> div {
-					height: 100%;
-					width: 32vw;
-					padding: 2.4vw 1.7vw;
-					h3 {
-						margin: 0 0 1.3vw 0;
-							font-size: 1.2vw;
-							text-transform: uppercase;
-							font-weight: 300;
-					}
-					p {
-						margin: 0;
-						span {
-							font-weight: 500;
-							font-size: 14px;
-						}
-					}
-				}
-			}
-		}
-
 		// pagination
-		.pagination {
+		.pagination { display: none;
 			transition: height .6s 0s ease;
 			position: absolute;
 			bottom: 0%;
@@ -426,11 +380,11 @@
 			> div {
 				display: inline-block;
 				vertical-align: top;
-				width: 20px;
-				height: 20px;
+				width: 10px;
+				height: 10px;
 				background: #ebebeb;
 				&:not(:first-child) {
-					margin: 0 0 0 15px;
+					margin: 0 0 0 8px;
 				}
 			}
 		}
