--- a/scss/general/_menu.scss
+++ b/scss/general/_menu.scss
@@ -83,7 +83,7 @@
 				top: 0;
 				left: 0;
 			}
-			&:not(:last-child) {
+			&:not(:last-child) a {
 				border-right: 1px solid #f5f5f5;
 			}
 			a {
@@ -97,30 +97,30 @@
 					text-decoration: none;
 					text-transform: uppercase;
 					color: #222222;
-					font-size: 1.2vw;
+					font-size: 1.5vw;
 					font-weight: 600;
 				.tab {
 					display: table;
 					width: 100%;
 					height: 100%;
-					padding: 20vw 0 0 0;
+					padding: 16vw 0 0 0;
 					.cell {
 						display: table-cell;
 						vertical-align: middle;
 						.description {
 							transition: opacity .3s 0s, transform .3s 0s ease;
 							opacity: 0;
-							transform: translateY(-80%);
+							transform: translateY(-130%);
 							position: absolute;
 							top: 50%;
 							left: 0;
 							width: 100%;
 							margin: -5vw 0 0 0;
-							padding: 0 4vw;
+							padding: 0 3vw;
 								font-size: 14px;
 								text-transform: none;
 								font-weight: 300;
-								color: #d2d2d2;
+								color: #929292;
 								line-height: 140%;
 						}
 						.num {
@@ -128,12 +128,12 @@
 							position: absolute;
 							left: 50%;
 							top: 50%;
-							margin: 8vw 0 0 0;
+							margin: 4vw 0 0 -4vw;
 							transform: translate(-50%, -50%);
 							display: block;
-							opacity: 0.03;
+							opacity: 0.02;
 								text-align: center;
-								font-size: 12vw;
+								font-size: 18vw;
 								line-height: 100%;
 								font-weight: 600;
 						}
@@ -150,14 +150,14 @@
 					.tab .cell {
 						.description {
 							opacity: 1;
-							transform: translateY(-50%);
+							transform: translateY(-110%);
 						}
 						.num {
-							opacity: 0.015;
+							opacity: 0.01;
 								font-size: 16vw;
 						}
 						.name {
-							transform: translateY(-10px);
+							//transform: translateY(-5px);
 						}
 					}
 				}
