--- a/scss/general/layout/_header.scss
+++ b/scss/general/layout/_header.scss
@@ -4,7 +4,7 @@ header {
 	top: 0;
 	left: 0;
 	width: 100%;
-	padding: 1vw calc(1vw + 4px) 0;
+	padding: 1vw 1vw 0;
 	.wrapper {
 		position: relative;
 	}
