--- a/app/templates/partials/home/step-2.html
+++ b/app/templates/partials/home/step-2.html
@@ -23,7 +23,7 @@
 		</div>
 		<div class="visualization">
 			<div class="viz-wrapper">
-				<div class="image" style="background:url('pictures/img2.jpg') no-repeat center"></div>
+				<div class="image" style="background:url('pictures/img2.jpg') no-repeat center/contain"></div>
 				<div class="content">
 					
 				</div>
