--- a/app/templates/partials/home/step-3.html
+++ b/app/templates/partials/home/step-3.html
@@ -3,16 +3,29 @@
 
 		<!-- text -->
 		<div class="title-step">
-			<div class="title-1">
-				<h2>Сучасне<br>виробництво</h2>
-				<p>Італійське обладнання останнього, п'ятого покоління робить процес виготовлення повністю автоматизованим</p>
+			<div class="title title-1">
+				<div>
+					<h2>Сучасне</h2>
+					<p class="sub">виробництво</p>
+					<div class="text">
+						<p>Італійське обладнання останнього, п'ятого покоління робить процес виготовлення повністю автоматизованим</p>
+					</div>
+				</div>
 			</div>
-			<div class="title-2">
-				<h2>Професійний<br>монтаж</h2>
-				<p>15 монтажних команд, які вже 14 років монтують будь яку сендвіч панель</p>
+			<div class="title title-2">
+				<div>
+					<p class="sub">Професійний</p>
+					<h2>монтаж</h2>
+					<div class="text">
+						<p>15 монтажних команд, які вже 14 років монтують будь яку сендвіч панель</p>
+					</div>
+				</div>
 			</div>
-			<div class="title-3">
-				<h2>Реалізовані<br>проекти</h2>
+			<div class="title title-3">
+				<div>
+					<p class="sub">Реалізовані</p>
+					<h2>проекти</h2>
+				</div>
 			</div>
 		</div>
 
@@ -20,6 +33,7 @@
 		<div class="item-wrapper">
 			<div class="item item-1" style="background:url('pictures/img5.jpg') no-repeat center/cover fixed"></div>
 			<div class="item item-2" style="background:url('pictures/img5.jpg') no-repeat center/cover fixed"></div>
+			<div class="item item-3" style="background:url('pictures/img5.jpg') no-repeat center/cover fixed"></div>
 		</div>
 
 		<!-- video -->
