--- a/scss/content/about/_step-1.scss
+++ b/scss/content/about/_step-1.scss
@@ -2,27 +2,28 @@
 
 	// title
 	.title-step {
-		margin-left: 17%;
+		margin-left: 15%;
 		padding: 10vw 1vw 0;
 		h2 {
 			margin: 0 0 3vw 0;
 			position: relative;
-			line-height: 85%;
+				line-height: 85%;
+				font-size: 3vw;
 			.num {
-				font-size: 16vw;
-				letter-spacing: -3vw;
-				color: #d2d2d2;
 				position: absolute;
 				top: 0;
 				left: 0;
-				transform: translate(-60%, -65%);
+				transform: translate(-60%, -95%);
 				z-index: -1;
+					font-size: 18vw;
+					letter-spacing: -3vw;
+					color: #e2e2e2;
 			}
 		}
 		.text {
 			position: relative;
-			left: 3vw;
-			max-width: 15vw;
+			left: 6vw;
+			max-width: 20vw;
 				line-height: 160%;
 			.sub {
 				margin: 0;
