--- a/app/templates/partials/montage/step-4.html
+++ b/app/templates/partials/montage/step-4.html
@@ -1,7 +1,7 @@
 <div class="step step-4">
 	<div class="wrapper">
 		<div class="title-step">
-			<h2>Напишіть нам</h2>
+			<h2>Напишіть<br>нам</h2>
 			<div class="text">
 				<p class="sub">Ми готові допомогти вам<br>в будь-якому питанню</p>
 				<p><a href="#" class="button">Задати питання</a></p>
