--- a/scss/content/about/_step-2.scss
+++ b/scss/content/about/_step-2.scss
@@ -2,16 +2,16 @@
 
 	// title
 	.title-step {
-		margin-left: 16%;
+		//margin-left: 18%;
 		.text {
 			max-width: 15vw;
 			position: relative;
-			left: 3vw;
+			//left: 3vw;
 			p {
 				margin: 0;
 			}
 			.sub-1 {
-				margin: 4vw 0 8px 0;
+				margin: 3vw 0 8px 0;
 			}
 			.sub-2 {
 				margin: 2vw 0 8px 0;
