--- a/scss/content/home/_step-3.scss
+++ b/scss/content/home/_step-3.scss
@@ -4,6 +4,7 @@
 	padding: 1vw;
 	min-height: 100vh;
 	> div {
+		padding: 1px 0 0 0;
 		position: relative;
 		top: 0;
 		left: 0;
@@ -15,52 +16,56 @@
 	.title-step {
 		position: relative;
 		z-index: 2;
-		padding: 5vw 1vw 0;
-		span {
-			transition: transform .3s ease;
-			display: block;
+		margin: 5vw 1vw 0 18%;
+		padding: 0;
+		.title {
+			transition: width .6s 0s ease;
 			overflow: hidden;
-		}
-		.span-wrap {
-			position: relative;
-			//outline: 1px solid rgba(255, 0, 0, 0.11);
-			overflow: hidden;
-			.span-item {
-				//outline: 1px solid #ddd;
-				position: absolute;
-				top: 0;
-				left: 0;
-				padding: 4px 0;
-				height: 100%;
-				&.span-item-1 { transform: translateY(0%);		transition-delay: .2s }
-				&.span-item-2 { transform: translateY(100%);	transition-delay: .1s }
-				&.span-item-3 { transform: translateY(200%);	transition-delay: 0s }
+			width: 0;
+			position: absolute;
+			top: 0;
+			left: 0;
+			&.title-1 {
+				transition: width .6s .6s ease;
+				width: 19vw;
+			}
+			> div {
+				width: 19vw;
 			}
 		}
-
 		h2 {
-			.span-wrap {
-				height: calc(3vw + 8px);
-			}
+			margin: 0;
 		}
-		.text {
-			.span-wrap {
-				height: calc(1.5vw + 8px);
-			}
+		.sub {
+			margin: 0;
 		}
+		
 	}
 	&[step="content-2"] {
-		.title-step .span-wrap .span-item {
-			&.span-item-1 { transform: translateY(-100%);	transition-delay: 0s }
-			&.span-item-2 { transform: translateY(0);		transition-delay: .1s }
-			&.span-item-3 { transform: translateY(100%);	transition-delay: .2s }
+		.title-step .title {
+			&.title-1 {
+				transition: width .6s 0s ease;
+				width: 0;
+			}
+			&.title-2 {
+				transition: width .6s .6s ease;
+				width: 19vw;
+			}
 		}
 	}
 	&[step="content-3"] {
-		.title-step .span-wrap .span-item {
-			&.span-item-1 { transform: translateY(-200%); 	transition-delay: 0s }
-			&.span-item-2 { transform: translateY(-100%); 	transition-delay: .1s }
-			&.span-item-3 { transform: translateY(0); 		transition-delay: .2s }
+		.title-step .title {
+			&.title-1 {
+				width: 0;
+			}
+			&.title-2 {
+				transition: width .6s 0s ease;
+				width: 0;
+			}
+			&.title-3 {
+				transition: width .6s .6s ease;
+				width: 19vw;
+			}
 		}
 	}
 
@@ -76,16 +81,26 @@
 			position: absolute;
 			transition: height .6s ease;
 			&.item-1 {
+				top: 50%;
+				left: -14px;
+				height: 30%;
+				width: calc(16.666666666666668% * 1 + -3px);
+				-webkit-filter: grayscale(100%);
+				opacity: 0.1;
+			}
+			&.item-2 {
 				top: 70%;
 				left: calc(16.666666666666668% - 9px);
 				height: 30%;
 				width: calc(16.666666666666668% * 2 + 3px);
 			}
-			&.item-2 {
+			&.item-3 {
 				top: 30%;
 				left: calc(16.666666666666668% * 3 + 3px);
 				height: 70%;
 				width: calc(16.666666666666668% - 2px);
+				-webkit-filter: grayscale(100%);
+				opacity: 0.1;
 			}
 		}
 	}
@@ -135,9 +150,11 @@
 				}
 			}
 			&.video-2 {
-				top: 30%;
+				//top: 30%;
+				bottom: 0;
 				left: calc(16.666666666666668% * 3 + 3px);
-				height: 70%;
+				//height: 70%;
+				height: 0;
 				width: calc(16.666666666666668% - 2px);
 				video {
 					bottom: 50%;
@@ -164,6 +181,19 @@
 			.item {
 				&.item-1, &.item-2, &.item-3 {
 					height: 0;
+				}
+			}
+		}
+		.video-wrapper .video {
+			&.video-2 {
+				height: 70%;
+			}
+		}
+		.slider-wrapper {
+			.items .item .img {
+				&.img-1 {
+					transition: height .6s 0s ease, width .6s .1s ease;
+					height: 70%;
 				}
 			}
 		}
@@ -257,14 +287,15 @@
 					width: 100%;
 					height: 100%;
 					&.img-1 {
-						transition: height .6s .1s ease, width .6s .1s ease;
+						transition: height .6s 0s ease, width .6s .1s ease;
 						bottom: 0;
 						left: calc(16.666666666666668% * 3 + 3px);
-						height: 70%;
+						//height: 70%;
+						height: 0;
 						width: 0;
 					}
 					&.img-2 {
-						transition: height .6s .1s ease, width .6s .2s ease;
+						transition: height .6s 0s ease, width .6s .2s ease;
 						bottom: 30%;
 						left: calc(16.666666666666668% * 4 + 10px);
 						height: 70%;
@@ -301,7 +332,7 @@
 							}
 						}
 						.text {
-							margin: 0;
+							margin: 1vw 0;
 						}
 					}
 				}
