--- a/scss/general/_elements.scss
+++ b/scss/general/_elements.scss
@@ -36,7 +36,8 @@ $color-2: #ebebeb;		// сірий
 
 // button
 .button {
-	margin: 2vw 0 0 0;
+	//margin: 2vw 0 0 0;
+	margin: 0;
 	padding: 11px 36px 12px;
 	border: 1px solid #5498d5;
 	display: inline-block;
