--- a/scss/general/layout/_header.scss
+++ b/scss/general/layout/_header.scss
@@ -14,7 +14,7 @@ header {
 		width: 90px;
 		height: 90px;
 		display: table;
-		background: #222;
+		//background: #222;
 		> div {
 			display: table-cell;
 			vertical-align: middle;
@@ -33,18 +33,17 @@ header {
 		right: 0;
 		width: 90px;
 		height: 90px;
-		background: #222;
 		> div {
-			height: 20px;
-			width: 30px;
-			position: relative;
-			margin: 35px 0 0 30px;
+		height: 26px;
+		width: 30px;
+		position: relative;
+		margin: 32px 0 0 30px;
 			span {
 				position: absolute;
 				top: 0;
 				width: 4px;
 				height: 100%;
-				background: #fff;
+				background: #222;
 				&:nth-child(1) {
 					left: 0;
 				}
